# pysecure

./: CMakeLists.txt  README.md  bindings.cpp  db.cpp  db.h  main.cpp
scripts/: report.py
test_proj/: main.py  second.py
test_proj/dir/: subdirr.py
test_proj/dir/subdir/: subpy.py
